--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
+/.vs/
+/packages/
+bin/
+obj/
+TestResults/
+*~
 *.user
-*.suo
-*.GhostDoc.xml
 *.userprefs
-/.vs
-/packages
-distribute
-bin
-obj
+*.suo
