--- a/CodeQuality/RJCP.CodeQuality.csproj
+++ b/CodeQuality/RJCP.CodeQuality.csproj
@@ -51,6 +51,10 @@
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="RJCP.MSBuildTasks" Version="0.1.0" />
+  </ItemGroup>
+
   <ItemGroup Condition="$(TargetFramework.StartsWith('netstandard'))">
     <!-- For loading the app.config file, as in .NET 4.x -->
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
