--- a/CodeQuality/RJCP.CodeQuality.csproj
+++ b/CodeQuality/RJCP.CodeQuality.csproj
@@ -64,6 +64,8 @@
   <ItemGroup Condition="$(TargetFramework.StartsWith('netstandard'))">
     <!-- For loading the app.config file, as in .NET 4.x -->
     <PackageReference Include="System.Configuration.ConfigurationManager" Version="4.7.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Configuration" Version="3.1.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -82,6 +84,10 @@
     <Compile Include="NUnitExtensions\ScratchPad.cs" />
     <Compile Include="NUnitExtensions\TestAccessor.cs" />
     <Compile Include="NUnitExtensions\TestContextAccessor.cs" />
+    <Compile Include="NUnitExtensions\TestContextAccessor+WriteConsole.cs" />
+    <None Include="NUnitExtensions\Trace\NUnitLogger.cs" />
+    <None Include="NUnitExtensions\Trace\NUnitLoggerExtensions.cs" />
+    <None Include="NUnitExtensions\Trace\NUnitLoggerProvider.cs" />
     <Compile Include="OSInfo\Platform.cs" />
     <Compile Include="PrivateObject.cs" />
     <Compile Include="PrivateType.cs" />
@@ -91,6 +97,12 @@
     <None Include="maml\AccessorBase.xml" />
     <None Include="..\LICENSE.md" Pack="true" PackagePath="\" />
     <None Include="..\README.md" Pack="true" PackagePath="\" />
+  </ItemGroup>
+  
+  <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
+    <Compile Include="NUnitExtensions\Trace\NUnitLogger.cs" />
+    <Compile Include="NUnitExtensions\Trace\NUnitLoggerExtensions.cs" />
+    <Compile Include="NUnitExtensions\Trace\NUnitLoggerProvider.cs" />
   </ItemGroup>
 
 </Project>
