--- a/CodeQualityTest/RJCP.CodeQualityTest.csproj
+++ b/CodeQualityTest/RJCP.CodeQualityTest.csproj
@@ -96,8 +96,13 @@
     <Compile Include="NUnitExtensions\DeployProperties.cs" />
     <Compile Include="NUnitExtensions\ScratchPad2ndTest.cs" />
     <Compile Include="NUnitExtensions\ScratchPadTest.cs" />
+    <None Include="NUnitExtensions\Trace\NUnitLoggerTest.cs" />
     <Compile Include="PrivateObjectTest.cs" />
     <Compile Include="PrivateTypeTest.cs" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFrameworkIdentifier)' == '.NETCoreApp'">
+    <Compile Include="NUnitExtensions\Trace\NUnitLoggerTest.cs" />
   </ItemGroup>
 
   <ItemGroup>
