NUnitExtensions: Provide a NUnitTraceListener
Applications can opt to use the NUnitTraceListener to log, instead of to the console, for more reliable logging.

Issue: DOTNET-396

--- a/CodeQualityTest/App.config
+++ b/CodeQualityTest/App.config
@@ -7,4 +7,19 @@
   <NUnitExtensions>
     <deploy workDir="work" force="false"/>
   </NUnitExtensions>
+
+  <system.diagnostics>
+    <sharedListeners>
+      <add name="nunitListener" type="RJCP.CodeQuality.NUnitExtensions.Trace.NUnitTraceListener, RJCP.CodeQuality"/>
+    </sharedListeners>
+
+    <sources>
+      <source name="RJCP.NUnitTraceListenerTest" switchValue="Verbose">
+        <listeners>
+          <remove name="Default"/>
+          <add name="nunitListener"/>
+        </listeners>
+      </source>
+    </sources>
+  </system.diagnostics>
 </configuration>
