--- a/CodeQuality/RJCP.CodeQuality.csproj
+++ b/CodeQuality/RJCP.CodeQuality.csproj
@@ -88,6 +88,7 @@
     <None Include="NUnitExtensions\Trace\NUnitLogger.cs" />
     <None Include="NUnitExtensions\Trace\NUnitLoggerExtensions.cs" />
     <None Include="NUnitExtensions\Trace\NUnitLoggerProvider.cs" />
+    <Compile Include="NUnitExtensions\Trace\NUnitTraceListener.cs" />
     <Compile Include="OSInfo\Platform.cs" />
     <Compile Include="PrivateObject.cs" />
     <Compile Include="PrivateType.cs" />
