Accessor Best Practices: Build PDF using DocBook toolchain
The docbook toolchain wasn't completely part of this repository. Add the missing files and generate a PDF.

To build this, must have:
* the docbook toolchain installed as in [1].
* java installed (e.g. apt install jre-default)
* fop

Then to build:
```
$ cd doc
$ mkdir build
$ cmake -DDOCBOOK45_BIN_DIR="$HOME/Downloads/docbook45" ..
$ make
```

Issue: DOTNET-494

--- a/doc/AccessorBestPractices/CMakeLists.txt
+++ b/doc/AccessorBestPractices/CMakeLists.txt
@@ -5,11 +5,11 @@ if(DOCBOOK45_FOUND)
     AccessorBaseBestPractices.xml)
 
   add_docbook45_target(
-    FORMAT html
-    OUTPUT AccessorBaseBestPractices.html
+    FORMAT pdf
+    OUTPUT AccessorBaseBestPractices.pdf
     INPUT ${DOCBOOK_FILES}
     IMAGEDIR images
-    XSL docbook.xsl
+    XSL docbookfo.xsl
     OLINK olinkdb.xml
     FILECOPY docbook.css)
 
