CodeQuality Test: Suppress CA1822 on Test Project
Under VS2022, the CA1822 is raised for test cases marked with the `[TestCase]` attribute (but not with the `[Test]` attribute), making this a false positive.

--- a/CodeQualityTest.NUnit2/RJCP.CodeQualityTest.NUnit2.csproj
+++ b/CodeQualityTest.NUnit2/RJCP.CodeQualityTest.NUnit2.csproj
@@ -57,6 +57,7 @@
     <Compile Include="..\CodeQualityTest\NUnitExtensions\DeployProperties.cs" />
     <Compile Include="..\CodeQualityTest\NUnitExtensions\ScratchPad2ndTest.cs" />
     <Compile Include="..\CodeQualityTest\NUnitExtensions\ScratchPadTest.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
   </ItemGroup>
 
   <ItemGroup>
