AccessorBase: Allow getting and setting properties
Added new features to get and set properties directly. This includes indexed properties, such as the `Item` property, which is normally indexed.

Issue: DOTNET-754

--- a/CodeQualityTest/RJCP.CodeQualityTest.csproj
+++ b/CodeQualityTest/RJCP.CodeQualityTest.csproj
@@ -70,6 +70,7 @@
     <Compile Include="HelperClasses\GenericClassTestAccessor.cs" />
     <Compile Include="HelperClasses\GenericClassTest.cs" />
     <Compile Include="HelperClasses\GenericStackAccessor.cs" />
+    <Compile Include="HelperClasses\IndexerClass.cs" />
     <Compile Include="HelperClasses\InternalSimpleBase1.cs" />
     <Compile Include="HelperClasses\InternalClassBase.cs" />
     <Compile Include="HelperClasses\InternalClassTest.cs" />
