Use ExceptionDispatchInfo when raising inner exceptions
Since .NET 4.5, inner exceptions can be reraised with ExceptionDispatchInfo.Capture(ex).Throw() for a better debugging experience.

Issue: DOTNET-784

--- a/CodeQuality/RJCP.CodeQuality.csproj
+++ b/CodeQuality/RJCP.CodeQuality.csproj
@@ -3,7 +3,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net40;netstandard2.1</TargetFrameworks>
+    <TargetFrameworks>net40;net45;netstandard2.1</TargetFrameworks>
     <OutputType>Library</OutputType>
     <Configurations>Debug;Release</Configurations>
     <NeutralLanguage>en-US</NeutralLanguage>
@@ -99,7 +99,7 @@
     <None Include="..\LICENSE.md" Pack="true" PackagePath="\" />
     <None Include="..\README.md" Pack="true" PackagePath="\" />
   </ItemGroup>
-  
+
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.1'">
     <Compile Include="NUnitExtensions\Trace\NUnitLogger.cs" />
     <Compile Include="NUnitExtensions\Trace\NUnitLoggerExtensions.cs" />
