--- a/CodeQualityTest.NUnit2/RJCP.CodeQualityTest.NUnit2.csproj
+++ b/CodeQualityTest.NUnit2/RJCP.CodeQualityTest.NUnit2.csproj
@@ -3,7 +3,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net40</TargetFrameworks>
+    <TargetFrameworks>net40;net45</TargetFrameworks>
     <OutputType>Library</OutputType>
     <IsPackable>false</IsPackable>
     <Configurations>Debug;Release</Configurations>
