CodeQuality: Add README to NuGet Package
Issue: DOTNET-807

--- a/CodeQuality/RJCP.CodeQuality.csproj
+++ b/CodeQuality/RJCP.CodeQuality.csproj
@@ -19,10 +19,11 @@
     <PackageId>RJCP.CodeQuality</PackageId>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageReadmeFile>README.md</PackageReadmeFile>
     <PackageProjectUrl>https://github.com/jcurl/RJCP.DLL.CodeQuality</PackageProjectUrl>
 
     <Description>Common functions to augment unit and integration testing, with some focus on the NUnit Test Framework.</Description>
-    <Version>0.6.0</Version>
+    <Version>0.6.1</Version>
 
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
 
