--- a/CodeQualityTest/RJCP.CodeQualityTest.Legacy.csproj
+++ b/CodeQualityTest/RJCP.CodeQualityTest.Legacy.csproj
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<Project Sdk="Microsoft.NET.Sdk">
+<Project>
+  <!-- Implicit top import required explicitly to change build output path -->
+  <PropertyGroup>
+    <MSBuildProjectExtensionsPath>legacy</MSBuildProjectExtensionsPath>
+    <BaseIntermediateOutputPath>$(MSBuildProjectExtensionsPath)\obj</BaseIntermediateOutputPath>
+    <OutputPath Condition="'$(Configuration)' != ''">$(MSBuildProjectExtensionsPath)\bin\$(Configuration)</OutputPath>
+  </PropertyGroup>
+  <Import Project="Sdk.props" Sdk="Microsoft.NET.Sdk" />
 
   <PropertyGroup>
-    <TargetFrameworks>net462;netcoreapp3.1</TargetFrameworks>
+    <TargetFramework>net48</TargetFramework>
     <OutputType>Library</OutputType>
     <IsPackable>false</IsPackable>
     <Configurations>Debug;Release</Configurations>
+    <DefineConstants>$(DefineConstants);NET40_LEGACY</DefineConstants>
 
-    <AssemblyName>RJCP.CodeQualityTest</AssemblyName>
+    <AssemblyName>RJCP.CodeQualityTest40</AssemblyName>
     <AssemblyTitle>RJCP.CodeQualityTest</AssemblyTitle>
     <Product>RJCP.CodeQuality</Product>
     <RootNamespace>RJCP.CodeQuality</RootNamespace>
@@ -38,7 +46,7 @@
     <Optimize>true</Optimize>
   </PropertyGroup>
 
-  <ItemGroup Condition="$(TargetFramework.StartsWith('net4'))">
+  <ItemGroup Condition="'$(TargetFrameworkIdentifier)' == '.NETFramework'">
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,8 +54,10 @@
 
   <ItemGroup>
     <EmbeddedResource Remove="legacy\**" />
+    <EmbeddedResource Remove="obj\**" />
     <EmbeddedResource Remove="TestResults\**" />
     <None Remove="legacy\**" />
+    <None Remove="obj\**" />
     <None Remove="TestResults\**" />
   </ItemGroup>
 
@@ -57,7 +67,9 @@
     <PackageReference Include="NUnit.Analyzers" Version="3.6.1" />
     <PackageReference Include="NUnit.ConsoleRunner" Version="3.16.3" />
     <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
-    <ProjectReference Include="..\CodeQuality\RJCP.CodeQuality.csproj" />
+    <ProjectReference Include="..\CodeQuality\RJCP.CodeQuality.csproj">
+      <SetTargetFramework>TargetFramework=net40</SetTargetFramework>
+    </ProjectReference>
   </ItemGroup>
 
   <ItemGroup>
@@ -104,14 +116,9 @@
     <Compile Include="NUnitExtensions\DeployProperties.cs" />
     <Compile Include="NUnitExtensions\ScratchPad2ndTest.cs" />
     <Compile Include="NUnitExtensions\ScratchPadTest.cs" />
-    <None Include="NUnitExtensions\Trace\NUnitLoggerTest.cs" />
     <Compile Include="NUnitExtensions\Trace\NUnitTraceListenerTest.cs" />
     <Compile Include="PrivateObjectTest.cs" />
     <Compile Include="PrivateTypeTest.cs" />
-  </ItemGroup>
-
-  <ItemGroup Condition="'$(TargetFrameworkIdentifier)' == '.NETCoreApp'">
-    <Compile Include="NUnitExtensions\Trace\NUnitLoggerTest.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -133,4 +140,6 @@
     </Content>
   </ItemGroup>
 
+  <!-- Implicit top import required explicitly to change build output path -->
+  <Import Project="Sdk.targets" Sdk="Microsoft.NET.Sdk" />
 </Project>
