Implement SparseStream for testing and simulating data inputs
Provide a `Stream` object called `SparseStream`, where the user can provide initially data as byte sections. For example, this is useful for checking large files, where only portions of those files are interesting.

Provides a useful (but slow) operation for getting slices of arrays, when testing on .NET/.NET Core that use arrays without having to do conditional compiles. On pure .NET code, use `Span` or the `Range` operator on arrays instead.

Issue: DOTNET-872

--- a/CodeQuality/RJCP.CodeQuality.csproj
+++ b/CodeQuality/RJCP.CodeQuality.csproj
@@ -72,6 +72,7 @@
     <Compile Include="AccessorBase.cs" />
     <Compile Include="AppConfig\Deploy.cs" />
     <Compile Include="AppConfig\NUnitExtensionsSection.cs" />
+    <Compile Include="ArrayBufferExtensions.cs" />
     <Compile Include="Config\IniFile.cs" />
     <Compile Include="Config\IniKeyPair.cs" />
     <Compile Include="Config\IniSection.cs" />
@@ -79,6 +80,7 @@
     <Compile Include="DelegateTargets.cs" />
     <Compile Include="GenericMethodCache.cs" />
     <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="IO\SparseStream.cs" />
     <Compile Include="NUnitExtensions\Deploy.cs" />
     <Compile Include="NUnitExtensions\ScratchOptions.cs" />
     <Compile Include="NUnitExtensions\ScratchPad.cs" />
