--- a/CodeQualityTest/RJCP.CodeQualityTest.csproj
+++ b/CodeQualityTest/RJCP.CodeQualityTest.csproj
@@ -98,6 +98,7 @@
     <Compile Include="HelperClasses\RelatedCollectionClassAccessor.cs" />
     <Compile Include="HelperClasses\StaticClassTest.cs" />
     <Compile Include="HelperClasses\StaticClassTestAccessor.cs" />
+    <Compile Include="IO\SparseStreamTest.cs" />
     <Compile Include="NestedPrivateTypeTest.cs" />
     <Compile Include="NUnitExtensions\DeployBackPathTest.cs" />
     <Compile Include="NUnitExtensions\DeployForwardPathTest.cs" />
