SimpleStream: Provide a stream that does nothing
The SimpleStream provides a basic API, it ignores writes (but it appears to work), and it reads data. The internal state of the stream is still managed, and returns errors if the stream parameters are incorrect. Stream timeouts are supported, but don't do anything.

Issue: DOTNET-873

--- a/CodeQualityTest/RJCP.CodeQualityTest.Legacy.csproj
+++ b/CodeQualityTest/RJCP.CodeQualityTest.Legacy.csproj
@@ -111,6 +111,7 @@
     <Compile Include="HelperClasses\RelatedCollectionClassAccessor.cs" />
     <Compile Include="HelperClasses\StaticClassTest.cs" />
     <Compile Include="HelperClasses\StaticClassTestAccessor.cs" />
+    <Compile Include="IO\SimpleStreamTest.cs" />
     <Compile Include="IO\SparseStreamTest.cs" />
     <Compile Include="NestedPrivateTypeTest.cs" />
     <Compile Include="NUnitExtensions\DeployBackPathTest.cs" />
