--- a/CodeQuality/RJCP.CodeQuality.csproj
+++ b/CodeQuality/RJCP.CodeQuality.csproj
@@ -80,6 +80,8 @@
     <Compile Include="DelegateTargets.cs" />
     <Compile Include="GenericMethodCache.cs" />
     <Compile Include="GlobalSuppressions.cs" />
+    <Compile Include="IO\CompletedAsync.cs" />
+    <Compile Include="IO\SimpleStream.cs" />
     <Compile Include="IO\SparseStream.cs" />
     <Compile Include="NUnitExtensions\Deploy.cs" />
     <Compile Include="NUnitExtensions\ScratchOptions.cs" />
