WriteOnlyStream: New class for testing streams that are not readable
Provides a stream that can only be written to. This is useful for testing for strange scenarios (most streams are read/write or readonly).

Issue: DOTNET-873

--- a/CodeQualityTest/RJCP.CodeQualityTest.Legacy.csproj
+++ b/CodeQualityTest/RJCP.CodeQualityTest.Legacy.csproj
@@ -113,6 +113,7 @@
     <Compile Include="HelperClasses\StaticClassTestAccessor.cs" />
     <Compile Include="IO\SimpleStreamTest.cs" />
     <Compile Include="IO\SparseStreamTest.cs" />
+    <Compile Include="IO\WriteOnlyStreamTest.cs" />
     <Compile Include="NestedPrivateTypeTest.cs" />
     <Compile Include="NUnitExtensions\DeployBackPathTest.cs" />
     <Compile Include="NUnitExtensions\DeployForwardPathTest.cs" />
