--- a/CodeQuality/RJCP.CodeQuality.csproj
+++ b/CodeQuality/RJCP.CodeQuality.csproj
@@ -83,6 +83,7 @@
     <Compile Include="IO\CompletedAsync.cs" />
     <Compile Include="IO\SimpleStream.cs" />
     <Compile Include="IO\SparseStream.cs" />
+    <Compile Include="IO\WriteOnlyStream.cs" />
     <Compile Include="NUnitExtensions\Deploy.cs" />
     <Compile Include="NUnitExtensions\ScratchOptions.cs" />
     <Compile Include="NUnitExtensions\ScratchPad.cs" />
