Stream Extensions: Provide ReadStream that copies into a byte array
Often test cases want to check what was written into a stream, they might not be able to use `MemoryStream.ToArray()`.

Issue: DOTNET-875

--- a/CodeQuality/RJCP.CodeQuality.csproj
+++ b/CodeQuality/RJCP.CodeQuality.csproj
@@ -83,6 +83,8 @@
     <Compile Include="IO\CompletedAsync.cs" />
     <Compile Include="IO\SimpleStream.cs" />
     <Compile Include="IO\SparseStream.cs" />
+    <Compile Include="IO\StreamExtensions.cs" />
+    <Compile Include="IO\StreamMode.cs" />
     <Compile Include="IO\WriteOnlyStream.cs" />
     <Compile Include="NUnitExtensions\Deploy.cs" />
     <Compile Include="NUnitExtensions\ScratchOptions.cs" />
