ReadLimitStream: Provide a stream reader that reads less data than requested
Having a stream that reads less data that is requested often results in finding subtle errors in decoders. For example, if every read were to provide a single byte, then errors in state machines can be found that interpret more data than what was actually obtained.

Issue: DOTNET-874

--- a/CodeQuality/RJCP.CodeQuality.csproj
+++ b/CodeQuality/RJCP.CodeQuality.csproj
@@ -81,6 +81,7 @@
     <Compile Include="GenericMethodCache.cs" />
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="IO\CompletedAsync.cs" />
+    <Compile Include="IO\ReadLimitStream.cs" />
     <Compile Include="IO\SimpleStream.cs" />
     <Compile Include="IO\SparseStream.cs" />
     <Compile Include="IO\StreamExtensions.cs" />
