CodeQuality: Update style for .NET 6.0 (C# 10)
Use Roslyn fixes for:
- IDE0074: Use compound assignment
- IDE0078: Use pattern matching
- IDE0090: Use new().

Use `myObj is null` instead of `myObj == null`.

To get this to work, we enable C#10 for .NET Frameworks.

Issue: DOTNET-942

--- a/CodeQualityTest.NUnit2/RJCP.CodeQualityTest.NUnit2.csproj
+++ b/CodeQualityTest.NUnit2/RJCP.CodeQualityTest.NUnit2.csproj
@@ -22,6 +22,7 @@
     <AnalysisMode>Default</AnalysisMode>
     <AnalysisLevel>latest</AnalysisLevel>
     <EnableDefaultItems>false</EnableDefaultItems>
+    <LangVersion Condition="$(TargetFramework.StartsWith('net4'))">10</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
@@ -44,6 +45,7 @@
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
     <PackageReference Include="NUnit" Version="2.7.1" />
     <PackageReference Include="NUnitTestAdapter" Version="2.3.0" />
+    <PackageReference Include="CSharpIsNullAnalyzer" Version="0.1.495" PrivateAssets="all" />
     <ProjectReference Include="..\CodeQuality\RJCP.CodeQuality.csproj" />
   </ItemGroup>
 
