--- a/CodeQualityTest.NUnit2/RJCP.CodeQualityTest.NUnit2.csproj
+++ b/CodeQualityTest.NUnit2/RJCP.CodeQualityTest.NUnit2.csproj
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net40;net45</TargetFrameworks>
+    <TargetFrameworks>net40;net45;net462;net48</TargetFrameworks>
     <OutputType>Library</OutputType>
     <IsPackable>false</IsPackable>
     <Configurations>Debug;Release</Configurations>
@@ -12,7 +12,7 @@
     <RootNamespace>RJCP.CodeQuality</RootNamespace>
 
     <Authors>Jason Curl</Authors>
-    <Copyright>(C) 2016-2021, Jason Curl</Copyright>
+    <Copyright>(C) 2016-2024, Jason Curl</Copyright>
     <Company></Company>
     <Description>NUnit Test Harness for RJCP.CodeQuality using NUnit 2.x.</Description>
     <Version>1.0.0</Version>
