--- a/CodeQualityTest.NUnit3/RJCP.CodeQualityTest.NUnit3.csproj
+++ b/CodeQualityTest.NUnit3/RJCP.CodeQualityTest.NUnit3.csproj
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net40;net45;net462;net48</TargetFrameworks>
+    <TargetFrameworks>net462;net6.0;net8.0</TargetFrameworks>
     <OutputType>Library</OutputType>
     <IsPackable>false</IsPackable>
     <Configurations>Debug;Release</Configurations>
 
-    <AssemblyName>RJCP.CodeQualityTest.NUnit2</AssemblyName>
-    <AssemblyTitle>RJCP.CodeQualityTest.NUnit2</AssemblyTitle>
+    <AssemblyName>RJCP.CodeQualityTest.NUnit3</AssemblyName>
+    <AssemblyTitle>RJCP.CodeQualityTest.NUnit3</AssemblyTitle>
     <Product>RJCP.CodeQuality</Product>
     <RootNamespace>RJCP.CodeQuality</RootNamespace>
 
     <Authors>Jason Curl</Authors>
     <Copyright>(C) 2016-2024, Jason Curl</Copyright>
     <Company></Company>
-    <Description>NUnit Test Harness for RJCP.CodeQuality using NUnit 2.x.</Description>
+    <Description>NUnit Test Harness for RJCP.CodeQuality using NUnit 3.x.</Description>
     <Version>1.0.0</Version>
 
     <AllowUnsafeBlocks>false</AllowUnsafeBlocks>
@@ -35,16 +35,18 @@
     <Optimize>true</Optimize>
   </PropertyGroup>
 
-  <ItemGroup Condition="$(TargetFramework.StartsWith('net4'))">
+  <ItemGroup Condition="'$(TargetFrameworkIdentifier)' == '.NETFramework'">
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="Microsoft.CSharp" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.5.0" />
-    <PackageReference Include="NUnit" Version="2.7.1" />
-    <PackageReference Include="NUnitTestAdapter" Version="2.3.0" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.9.0" />
+    <PackageReference Include="NUnit" Version="3.14.0" />
+    <PackageReference Include="NUnit.Analyzers" Version="4.0.1" />
+    <PackageReference Include="NUnit.ConsoleRunner" Version="3.17.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="4.5.0" />
     <PackageReference Include="CSharpIsNullAnalyzer" Version="0.1.495" PrivateAssets="all" />
     <ProjectReference Include="..\CodeQuality\RJCP.CodeQuality.csproj" />
   </ItemGroup>
@@ -56,19 +58,16 @@
     <Compile Include="..\CodeQualityTest\NUnitExtensions\ScratchPad2ndTest.cs" Link="NUnitExtensions\ScratchPad2ndTest.cs" />
     <Compile Include="..\CodeQualityTest\NUnitExtensions\ScratchPadTest.cs" Link="NUnitExtensions\ScratchPadTest.cs" />
     <Compile Include="GlobalSuppressions.cs" />
+    <None Include="..\CodeQualityTest\NUnitExtensions\Trace\NUnitLoggerTest.cs" Link="NUnitExtensions\Trace\NUnitLoggerTest.cs" />
+    <Compile Include="..\CodeQualityTest\NUnitExtensions\Trace\NUnitTraceListenerTest.cs" Link="NUnitExtensions\Trace\NUnitTraceListenerTest.cs" />
+  </ItemGroup>
+
+  <ItemGroup Condition="'$(TargetFrameworkIdentifier)' == '.NETCoreApp'">
+    <Compile Include="..\CodeQualityTest\NUnitExtensions\Trace\NUnitLoggerTest.cs" />
   </ItemGroup>
 
   <ItemGroup>
     <None Include="App.config" />
-    <Content Include="Resources\Config\TestEmptySection.ini">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Resources\Config\Test.ini">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
-    <Content Include="Resources\Config\TestDuplicate.ini">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </Content>
     <Content Include="Resources\test1.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
